--- a/less/index.less
+++ b/less/index.less
@@ -56,4 +56,70 @@ table {
 html, body {
     height: 100%;
 }
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|PT+Mono&display=swap');
 
+@main-font:'PT Mono', monospace;
+
+
+.center(){ 
+	display:flex;
+	justify-content:center;}
+
+.font-class() {
+		color: black;
+		font-size: 1em;
+		text-align: center;
+		font-family: @main-font;
+	  }
+	
+.container {
+	@media(max-width: 500px) {
+		.container {
+		  background: gray;
+		}
+}
+.top-nav {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 1em;
+  margin-left: 3em;
+  font-family: @main-font;
+}
+h1, h2 {
+  text-align: center;
+  font-size: 2rem;
+  margin-top: 4em;
+   @media(max-width: 500px) {
+
+   }
+}
+.main-content {
+background-color: grey;
+ display:flex;
+}
+.container {
+	width: 900px;
+	margin: 0 auto;
+}
+.intro, .skills {
+	width: 48%;
+	margin: 1%;
+	display: flex;
+	flex-direction: column;
+	@media(max-width: 500px;) {
+		display: flex;
+		width: 400px;
+		margin:0 auto;
+	}
+}
+.skills {
+	align-items: center;
+}
+.second-content, .third-content {
+	display:flex;
+	width: 95%;
+	margin: 1%;
+	flex-direction: column;
+	align-items: center;
+	.font-class()
+} 
